<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backdesign"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"></TextView>

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint"
        android:textColorHint="@android:color/white"
        android:background="@drawable/edtdesign"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/hint2"
        android:textColorHint="@android:color/white"
        android:background="@drawable/edtdesign"
        android:padding="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text4"
        android:id="@+id/register_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/edtdesign"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/singin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singin"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceSmall"/>
</LinearLayout>