<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    app:cardElevation="10dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datum"
            android:padding="7dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#FF9317E6"
            android:id="@+id/date"
            ></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="7dp"
                android:text="@string/naslov"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"></TextView>

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="0dp"
                android:maxLines="2"
                android:padding="7dp"
                android:text="@string/note"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"></TextView>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>